address review feedback- add comment and extract test helper